# poco-service-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release-image.yml
app/: main.py
app/clients/: backend_client.py
app/core/: settings.py
app/schemas/: analytics.py
app/services/: analytics_service.py
app/tools/: admin_tools.py  analysis_tools.py
skills/daily-usage-analysis/: SKILL.md
skills/daily-usage-analysis/references/: html-report-spec.md  range-analysis.md  single-day-workflow.md
tests/: test_analytics_service.py  test_backend_client_connectivity.py  test_tool_metadata.py
