[project]
name = "poco-mcp-service"
version = "0.1.0"
description = "Standalone MCP service for Poco analytics and management tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.ruff]
line-length = 88

[tool.pyrefly]
project-includes = ["**/*.py"]
search_path = ["."]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
